2001-10-18  Stefan Monnier  <monnier@cs.yale.edu>

	* mail/smtpmail.el (smtpmail-via-smtp): Use mail-envelope-from if set.

	* xml.el (xml-parse-tag): Use eq on char-after's return value.

2001-10-18  Gerd Moellmann  <gerd@gnu.org>

	* isearch.el (isearch-mode-map): Bind `mouse-movement' to nil.

	* obsolete/hilit19.el (hilit-lookup-face-create):
	Call set-face-font only if display-graphic-p.
	(toplevel): Remove references to window-system.

2001-10-18  Miles Bader  <miles@gnu.org>

	* simple.el (what-line): Avoid problems with field properties.

2001-10-17  Eli Zaretskii  <eliz@is.elta.co.il>

	* wid-edit.el (widget-field-face, widget-single-line-field-face):
	Define special colors for a tty.

2001-10-17  Francesco Potorti`  <pot@gnu.org>

	* comint.el (comint-password-prompt-regexp): Make it less
	restrictive, letting comint recognise OpenSSH2 passphrase prompts.

2001-10-17  John Wiegley  <johnw@gnu.org>

	* eshell/em-unix.el (eshell/cat): Do a quick test if something is
	a regular file, before checking if it is a directory or symlink.
	This avoids a call to eshell-file-attributes, which can be
	expensive in some situations.

	* eshell/em-ls.el (eshell-ls-dired-initial-args): Added an extra
	customization variable, to differentiate ls-in-dired from regular
	uses of ls.

2001-10-17  Miles Bader  <miles@gnu.org>

	* custom.el (defface): Mention `:inherit' in doc-string.

2001-10-16  Eli Zaretskii  <eliz@is.elta.co.il>

	* paren.el: Update the Commentary with installation instructions.

2001-10-15  Dave Love  <fx@gnu.org>

	* international/mule.el (set-auto-coding): Fix regexps for local
	variables section not to eat newlines.

2001-10-15  Miles Bader  <miles@gnu.org>

	* simple.el (display-message-or-buffer): Pass the correct buffer
	to `display-buffer'.

2001-10-14  Stefan Monnier  <monnier@cs.yale.edu>

	* progmodes/executable.el (executable-binary-suffixes): Make varalias.
	(executable-find): Use exec-suffixes.